<resources>
    <string name="app_name">Baking app</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="label_recipe_name">"Name: "</string>
    <string name="label_recipe_steps_number">"Steps: "</string>
    <string name="label_recipe_ingredients_amount">"Ingredients: "</string>
    <string name="label_recipe_servings">"Servings: "</string>

    <string name="button_previous">Previous</string>
    <string name="button_next">Next</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="recipe_label_steps">Steps</string>
    <string name="label_ingredients">"Ingredients: "</string>
    <string name="label_quantity">"Quantity: "</string>
    <string name="label_measure">"Measure: "</string>
    <string name="appwidget_text">RECIPE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_item_selected_tablet_text">Click on a step to view details</string>
</resources>
