<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <!--app:cardBackgroundColor="#66bb6a"-->
    <android.support.v7.widget.CardView
        app:cardCornerRadius="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        app:cardElevation="8dp"
        android:elevation="16dp">

        <!--TODO: Wrap the numbers aspect in a circle drawable-->
        <android.support.constraint.ConstraintLayout
            android:id="@+id/item_recipe_card_back"
            android:background="@drawable/background_item_animation"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/item_recipe_image"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginBottom="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:civ_border_color="@color/colorAccent"
                app:civ_border_width="2dp"
                app:civ_circle_background_color="@color/colorPrimary"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_recipe_label_name"
                style="@style/RecipeLabelStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/label_recipe_name"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toEndOf="@+id/item_recipe_image"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/item_recipe_label_ingredients_amount"
                style="@style/RecipeLabelStyle"
                android:layout_marginEnd="8dp"
                android:text="@string/label_recipe_ingredients_amount"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/item_recipe_label_name"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_label_name" />

            <TextView
                android:id="@+id/item_recipe_tv_ingredients"
                style="@style/RecipeCardTextStyle"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/item_recipe_label_ingredients_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_recipe_tv_name"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_label_ingredients_amount"
                tools:text="8" />

            <TextView
                android:id="@+id/item_recipe_label_steps_amount"
                style="@style/RecipeLabelStyle"
                android:layout_marginEnd="8dp"
                android:text="@string/label_recipe_steps_number"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/item_recipe_label_ingredients_amount"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_label_ingredients_amount" />

            <TextView
                android:id="@+id/item_recipe_tv_steps"
                style="@style/RecipeCardTextStyle"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/item_recipe_label_steps_amount"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_recipe_tv_ingredients"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_label_steps_amount"
                tools:text="10" />

            <TextView
                android:id="@+id/item_recipe_label_servings"
                style="@style/RecipeLabelStyle"
                android:layout_marginEnd="8dp"
                android:text="@string/label_recipe_servings"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/item_recipe_label_steps_amount"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_label_steps_amount" />

            <TextView
                android:id="@+id/item_recipe_tv_servings"
                style="@style/RecipeCardTextStyle"
                android:layout_marginEnd="8dp"
                app:layout_constraintBottom_toTopOf="@+id/item_recipe_label_servings"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/item_recipe_tv_steps"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_label_servings"
                tools:text="10" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.59" />

            <TextView
                android:id="@+id/item_recipe_tv_name"
                style="@style/RecipeCardTextStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/item_recipe_label_name"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/item_recipe_label_name"
                tools:text="Meat Pie" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</layout>