<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:elevation="16dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/recipe_ingredients_name_label"
                style="@style/RecipeLabelStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_ingredients"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/recipe_ingredients_quantity_label"
                style="@style/RecipeLabelStyle"
                android:layout_marginBottom="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_quantity"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/recipe_ingredients_measure_label"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_measure_label" />

            <TextView
                android:id="@+id/recipe_ingredients_measure_label"
                style="@style/RecipeLabelStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/label_measure"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintStart_toStartOf="@+id/recipe_ingredients_name_label"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_name_label" />

            <android.support.constraint.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="113dp" />

            <TextView
                android:id="@+id/recipe_ingredients_name_tv"
                style="@style/RecipeCardTextStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/recipe_ingredients_name_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_name_label"
                tools:text="Ingredients my foot" />

            <TextView
                android:id="@+id/recipe_ingredients_quantity_tv"
                style="@style/RecipeCardTextStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/recipe_ingredients_quantity_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_quantity_label"
                tools:text="4" />

            <View
                android:layout_width="2dp"
                android:layout_height="0dp"
                android:background="@color/colorAccent"
                app:layout_constraintBottom_toBottomOf="@+id/recipe_ingredients_quantity_tv"
                app:layout_constraintEnd_toStartOf="@+id/guideline"
                app:layout_constraintTop_toTopOf="@+id/recipe_ingredients_name_label" />

            <TextView
                android:id="@+id/recipe_ingredients_measure_tv"
                style="@style/RecipeCardTextStyle"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toTopOf="@+id/recipe_ingredients_measure_label"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@+id/recipe_ingredients_measure_label"
                tools:text="CUP" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>